[package]
name = "rs-rpc"
version = "0.1.0"
edition = "2021"
authors = ["daheige"]
description = "a simple grpc project for rust"
keywords = ["grpc", "rust", "rpc"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "rs-rpc-client"
path = "src/client.rs"

[[bin]]
name = "rs-grpc-gateway"
path = "gateway/main.rs"
[[bin]]
name = "rs-rpc-hybrid"
path = "src/hybrid_server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.2"
tokio = {version = "1.34.0",features = ["full"]}
# note: Must be the same as the tonic version
tonic-reflection = "0.10.2"

# server hybrid
# run the service on a single port
tower = { version = "0.4", features = ["full"] }
pin-project = "1.1.3"
hyper = { version = "0.14", features = ["full"] }
axum = { version = "0.6.20"}

[build-dependencies]
# note: Must be the same as the tonic version
tonic-build = "0.10.2"
