[package]
name = "rs-rpc"
version = "0.1.1"
edition = "2021"
authors = ["daheige"]
description = "a simple grpc project for rust"
keywords = ["grpc", "rust", "rpc"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "rs-rpc-client"
path = "src/client.rs"

[[bin]]
name = "rs-grpc-gateway"
path = "gateway/main.rs"

[[bin]]
name = "rs-multiplex-svc"
path = "src/multiplex_service.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
tokio = {version = "1.39.1",features = ["full"]}
# note: Must be the same as the tonic version
tonic-reflection = "0.12.1"

# 用于将grpc服务和http服务运行在一个端口上面
tower = { version = "0.4.13", features = ["steer"] }

# axum
axum = "0.7.5"

# serde
serde = { version = "1.0.204",features = ["derive"]}
serde_json = "1.0.120"

# async trait
async-trait = "0.1.81"

# autometrics-rs 用于自动prometheus metrics服务可观测性
autometrics = {version = "1.0.1",features = ["prometheus-exporter"]}

[build-dependencies]
# note: Must be the same as the tonic version
tonic-build = "0.12.1"
